--- a/plants/src/main/resources/application.properties
+++ b/plants/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=plants
+
+# Azure
+spring.datasource.url=jdbc:mysql://activity-server1.mysql.database.azure.com:3306/plants_db?useSSL=true
+spring.datasource.username=gloria
+spring.datasource.password=Password1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
