--- a/plants/pom.xml
+++ b/plants/pom.xml
@@ -30,6 +30,14 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+ 	<dependency>
+ 		<groupId>com.microsoft.azure</groupId>
+ 		<artifactId>spring-cloud-azure</artifactId>
+ 		<version>1.2.7</version>
+ 		<type>pom</type>
+ 	</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
