--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.cst323activity</groupId>
 	<artifactId>plants</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>plants</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -95,7 +96,7 @@
 
 
 	<build>
-		<finalName>app</finalName>
+		<finalName>java-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
