--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=plants
 
-# Azure
+# Azure database
 spring.datasource.url=jdbc:mysql://activity-server1.mysql.database.azure.com:3306/plants_db?useSSL=true
 spring.datasource.username=gloria
 spring.datasource.password=Password1
