--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.cst323activity</groupId>
 	<artifactId>plants</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<!-- <packaging>war</packaging> -->
 	<name>plants</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
