--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 spring.application.name=plants
 
 # Azure database
-spring.datasource.url=jdbc:mysql://activity-server1.mysql.database.azure.com:3306/plants_db?useSSL=true
-spring.datasource.username=gloria
-spring.datasource.password=Password1
+#spring.datasource.url=jdbc:mysql://activity-server1.mysql.database.azure.com:3306/plants_db?useSSL=true
+#spring.datasource.username=gloria
+#spring.datasource.password=Password1
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# AWS database
+#spring.datasource.url=jdbc:mysql://awseb-e-dtwtaebmdr-stack-awsebrdsdatabase-rweebnvg3swd.cj4mc2ecy8h6.us-east-2.rds.amazonaws.com:3306/plants_aws
+#spring.datasource.username=gloria
+#spring.datasource.password=Password1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Jaws DB
+spring.datasource.url=mysql://t5rerr8rmo4es0v9:c1hrdac2c2w9hs16@rnr56s6e2uk326pj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/f97cbtw5w3gaogru
+spring.datasource.username=t5rerr8rmo4es0v9
+spring.datasource.password=c1hrdac2c2w9hs16
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
