--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,8 @@ spring.application.name=plants
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Jaws DB
-spring.datasource.url=mysql://t5rerr8rmo4es0v9:c1hrdac2c2w9hs16@rnr56s6e2uk326pj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/f97cbtw5w3gaogru
+spring.datasource.url=jdbc:mysql://t5rerr8rmo4es0v9:c1hrdac2c2w9hs16@rnr56s6e2uk326pj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/f97cbtw5w3gaogru
 spring.datasource.username=t5rerr8rmo4es0v9
 spring.datasource.password=c1hrdac2c2w9hs16
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #
